fixed spacing issue in needs/offers cards views

--- a/app/assets/stylesheets/needs.scss
+++ b/app/assets/stylesheets/needs.scss
@@ -13,6 +13,9 @@ div.card.needs {
   }
 }
 
-.highlight-need {
+.card {
+  border: 3px solid white;
+}
+.card.highlight-need {
   border: 3px solid orange;
 }
